correctifs contraste

--- a/style.css
+++ b/style.css
@@ -702,7 +702,7 @@ a {
 }
 
 p {
-    font-size: 1.2em;
+    font-size: 1.3em;
 }
 
 .tight-width-whitespace {
@@ -803,6 +803,10 @@ h4 {
 
 .tc-white {
     color:white !important;
+}
+
+.tc-black{
+    color: black !important;
 }
 
 .btn-atomic-tangerine {
